--- a/starter-code/public/admin.html
+++ b/starter-code/public/admin.html
@@ -10,7 +10,27 @@
     <link rel="stylesheet" href="/styles/layout.css">
     <link rel="stylesheet" href="/styles/modules.css">
     <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
-    <!-- TODO: Setup a template for each row of the Author Stats section of this page: -->
+    <!-- DONE: Setup a template for each row of the Author Stats section of this page: -->
+    <script id="admin-template" type="text/x-handlebars-template">
+       <header>
+         <h1>Blog Stats</h1>
+         <div class="stats">
+           <ul class="artical-total">Total articals;
+             <li>s{{articalTotal}}</li>
+           </ul>
+           <ul class="words-total">Total words;
+             <li>{{wordsTotal}}</li>
+           </ul>
+           <h2>Author Stats</h2>
+           <p><em>Details on who is writing, and how much writing they are doing...</em></p>
+             <ul>
+               <li><strong>{{author}}</strong>: {{wordWritten} word written}</li>
+             </ul>
+         </div>
+       </header>
+       <section class="article-body">{{{body}}}</section>
+       <a href="#" class="read-on">Read on &rarr;</a>
+   </script>
 
   </head>
   <body>
@@ -46,14 +66,15 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.4/handlebars.js"></script>
     <script src="/vendor/scripts/handlebars.js"></script>
     <script src="/scripts/article.js"></script>
     <script src="/scripts/articleView.js"></script>
-    <!-- TODO: Due to changes in article.js and articleView.js to attach their interior objects to a global 'app' object, we need to make changes to the contents of the following <script> tag: -->
+    <!-- DONE: Due to changes in article.js and articleView.js to attach their interior objects to a global 'app' object, we need to make changes to the contents of the following <script> tag: -->
     <script>
-      // TODO: After we fetch and load all the articles, what view function do we want to run next?
+      // DONE: After we fetch and load all the articles, what view function do we want to run next?
       // Let's pass in a callback function, to determine what happens AFTER all articles are loaded.
-      Article.fetchAll();
+      app.Article.fetchAll();
     </script>
   </body>
 </html>
